--- a/project_php_poo/.htaccess
+++ b/project_php_poo/.htaccess
@@ -1,10 +1,16 @@
 <ifModule mod_rewrite.c>
 #Activar rewrite
 RewriteEngine on
+
 ErrorDocument 404 http://localhost/master_php/project_php_poo/error/
 
 RewriteCond %{SCRIPT_FILENAME} !-d
 RewriteCond %{SCRIPT_FILENAME} !-f
+
+# el primer (.*) significa que ponga el valor de $1 
+# el segundo (.*) significa que ponga el valor de $2
+#por lo que en vez de ser index.php?controller=usuario$action=save
+#sera index.php/usario/save
 
 RewriteRule ^(.*)/(.*) index.php?controller=$1&action=$2
  
